<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="es">

    <string name="app_name">SELMóvil</string>
    <string name="btnIngresar">Iniciar sesión</string>
    <string name="btnInf"></string>
    <string name="title_activity_informacion"></string>
    <string name="titleInformacion">Información</string>
    <string name="ivImgInformacion"></string>
    <string name="textInformacion">Para mayor infomación o en caso de tener dudas sobre la usabilidad de ésta aplicación, puede comunicarse al </string>
    <string name="textInf2">Si lo prefiere puede enviar un correo electrónico a: </string>
    <string name="tvInfCorreo">soportebtrsantander@grupocsi.com</string>
    <string name="title_activity_login">Inicio de sesión</string>
    <string name="textHintUser">Usuario</string>
    <string name="textHintPwd">Contraseña</string>
    <string name="btnLogin">Ingresar</string>
    <string name="btnCancelarLogin">Cancelar</string>
    <string name="title_activity_formulario">Registro</string>
    <string name="tVNombre1">Nombre 1</string>
    <string name="eTpNombre">Primer nombre</string>
    <string name="tVNombre2">Nombre 2</string>
    <string name="eTsNombre">Segundo nombre</string>
    <string name="tVApPaterno">Apellido P.</string>
    <string name="eTapPaterno">Apellido paterno</string>
    <string name="tVApMaterno">Apellido M.</string>
    <string name="eTapMaterno">Apellido materno</string>
    <string name="tVRfc">RFC</string>
    <string name="eTRfc">RFC</string>
    <string name="tVProducto">Producto</string>
    <string name="btnIdentificacion">Identificación</string>
    <string name="btnCompDom">Comprobante de Domicilio</string>
    <string name="btnCompIng">Comprobante de Ingresos</string>
    <string name="btnSolicitud">Solicitud</string>
    <string name="btnEnviar">Enviar</string>
    <string name="tVDoctos">Anexar documentación</string>
    <string name="tVDatosCliente">Solicitante</string>
    <string name="title_activity_identificacion"></string>
    <string name="btnHecho"> + </string>
    <string name="btnAgregar">Agregar</string>
    <string name="descImg1"></string>
    <string name="btnEliminar">Eliminar</string>
    <string name="title_activity_menu">Menú</string>
    <string name="btnCargaSolicitud">Registrar solicitud</string>
    <string name="btnListado">Listado de solicitudes</string>
    <string name="ptr_pull_to_refresh">Despliega para actualizar</string>
    <string name="ptr_release_to_refresh">Suelta para actualizar</string>
    <string name="ptr_refreshing">Actualizando</string>
    <string name="ptr_last_updated">Actualizado: %1$s</string>
    <string name="imgView"></string>
    <string name="title_activity_consultar_expedientes">Listado</string>
    <string name="tvempty">Sin expedientes</string>
    <string name="idExpedienteV">Expediente: </string>
    <string name="folio">Folio: </string>
    <string name="estatusInterno">     SEL</string>
    <string name="tVNombreCliente">NOMBRE</string>
    <string name="fechaCarga">Fecha de carga:</string>
    <string name="tVDocumentacion">DOCUMENTACIÓN</string>
    <string name="tVRevisado">REVISIÓN SEL</string>
    <string name="tVNumeroTramite">NÚMERO DE TRÁMITE</string>
    <string name="tvIndicaciones">INDICACIONES</string>
    <string name="tVIndicaciones">INDICACIONES</string>
    <string name="tVNomCliente">nombre</string>
    <string name="tVIncidencias">Indicaciones</string>
    <string name="tVIndica">Indica</string>
    <string name="estatusCliente">SANTANDER</string>
    <string name="documentos">DOCS</string>
    <string name="tVIncid">INCIDENCIAS</string>
    <string name="ivFondo"></string>
    <string name="iVLogo"></string>
    <string name="tvAnexar">Anexar</string>
    <string name="btnCerrarSesion">Cerrar sesión</string>
    <string name="btnInformacion">Información</string>
    <string name="btnCerrarApp">Cerrar aplicación</string>
    <string name="cancel">Cancelar</string>
    <string name="contdescnull"></string>
    <string name="save">Guardar</string>
    <string name="imgCrop"></string>
    <string name="title_activity_crop_image">Cortar imagen</string>
    <string name="title_activity_crop_option_adapter"></string>
    <string name="saving_image">Cortando imagen</string>
    <string name="preparing_card">Preparando sd</string>
    <string name="no_storage_card">Sin tarjeta para almacenar</string>
    <string name="not_enough_space">No hay suficiente espacio</string>
    <string name="empty">Sin expedientes por listar</string>
    <string name="switchOff">No</string>
    <string name="switchOn">Si</string>
    <string name="switchNameUser">Recordar usuario</string>
    <string name="btnListadoBase">Documentos guardados</string>
    <string name="btnGuardar">Guardar</string>
    <string name="title_activity_list_docs_guardados">Expedientes Pendientes</string>
    <string name="tVRFCCliente">RFC</string>
    <string name="tVProductoUpper">PRODUCTO</string>
    <string name="tVSolicitud">SOLICITUD</string>
    <string name="tVIdentCliente">IDENTIFICACIÓN</string>
    <string name="tVICompIngCliente">COMPROBANTE DE INGRESOS</string>
    <string name="tVICompDomCliente">COMPROBANTE DE DOMICILIO</string>
    <string name="chBSelTodo">SELECCIONAR TODO</string>
    <string name="btnEnviarSeleccionados">ENVIAR</string>
    <string name="tVTextInicio">SEL, Santander en Línea, es la solución desarrollada para validar y realizar trámites de Tarjetas de crédito en línea.</string>
    <string name="tVEtqBienvenido">Bienvenido a</string>
    <string name="tVTerminosYCond">Términos y Condiciones</string>
    <string name="tvCamposRequeridos">Requerido</string>
    <string name="tVSantander">SANTANDER</string>
    <string name="title_activity_splash_screen">SELMóvil</string>
    <string name="ivBienvenida"></string>
    <string name="tVIds">IDs</string>
    <string name="tVFechaNacimiento">Fecha de nacimiento</string>
    <string name="tVTelCelular">Celular</string>
    <string name="tVCorreo">Correo</string>
    <string name="textInformacion_b">para el área metropolitana</string>
    <string name="tVTel2">Aqui va el tel2</string>
    <string name="textInformacion_c">y con gusto lo atenderemos</string>
    <string name="tVTel1">018008011090</string>
</resources>