<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="com.grupocsi.btrmovil.ListDocsGuardados"
    tools:ignore="SmallSp" >
	
    <RelativeLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <CheckBox
        android:id="@+id/chBSelTodo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chBSelTodo"
        android:textColor="#000000" 
        android:layout_alignParentLeft="true"/>

    <Button
        android:id="@+id/btnEnviarSeleccionados"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/stylebtnsenviarpendientes"
        android:text="@string/btnEnviarSeleccionados"
        android:textColor="#FF1300"
        android:textSize="12sp"
        android:textStyle="bold" />
    
    </RelativeLayout>
	<TextView
	    android:id="@+id/tvSinRegistrosGuardados"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@null"
	    android:gravity="center_horizontal"
	    android:text="@string/empty" />
	<com.grupocsi.btrmovil.PullToRefreshListView 
	    android:id="@+id/gVlistExpGuardados"
	    android:layout_width="match_parent" 
	    android:layout_height="fill_parent" 
		android:numColumns="1"
    	android:horizontalSpacing="10dp"
    	android:verticalSpacing="10dp"
    	android:background="@drawable/background">

	</com.grupocsi.btrmovil.PullToRefreshListView>
</LinearLayout>