<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="@drawable/background"
    tools:context="com.grupocsi.btrmovil.cropImages.CropImage">
<view
        android:id="@+id/image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_x="0dip"
        android:layout_y="0dip"
        class="com.grupocsi.btrmovil.cropImages.CropImageView"
        android:background="@drawable/background"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingLeft="10dip"
        android:paddingRight="10dip" >

        <Button
            android:id="@+id/discard"
            style="@style/CropButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_alignParentLeft="true"
            android:text="@string/cancel"
            android:textColor="#FF1300"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/rotateLeft"
            style="@style/CropButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/discard"
            android:contentDescription="@string/contdescnull"
            android:src="@drawable/ic_rotate_left" 
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/rotateRight"
            style="@style/CropButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/rotateLeft"
            android:contentDescription="@string/contdescnull"
            android:src="@drawable/ic_rotate_right" 
            android:textColor="#FFFFFF"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/save"
            style="@style/CropButton"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/rotateRight"
            android:text="@string/save"
            android:textColor="#FF1300"
            android:textStyle="bold" />

    </RelativeLayout>    

</RelativeLayout>
    